fixed lamlog post signature

--- a/lamlog/_posts/2021-04-05-lamlog4.md
+++ b/lamlog/_posts/2021-04-05-lamlog4.md
@@ -23,3 +23,5 @@ The next blog after this will be "yardsale". The main challenge with this one wi
 
 Time to stretch jekyll to its fucking limits. 
 
+-- LAM
+
