made lamlog post images hosted in assets folder

--- a/lamlog/_posts/2021-04-05-lamlog4.md
+++ b/lamlog/_posts/2021-04-05-lamlog4.md
@@ -5,10 +5,10 @@ time: 2:31 AM the next day
 ---
 
 Today I worked on building my second blog, [ibuycrap](https://lam.blogliam.com/ibuycrap/) where I am planning to host my physical media collection and other things I buy that interest me. In just today I was able to get a multitude of things completed. First off, I was able to make a quick placeholder logo for the time being, seen below:  
-![ibuycrap logo](https://drive.google.com/uc?id=1X5ovCwl-rY57TFtuxW_9iz6P7_pZRL4b)  
+![ibuycrap logo](/assets/img/lamlog/ibuycraplogo.png)  
 
 Besides making the logo, I was also able to figure out altering the css, scss, and general directory of the website to achieve the look shown below. I altered Will's code that showed the time of posting to instead show the cost of the item I am posting about. Overall, I am quite suprised at how intuitive all this html/css and markdown stuff has become as I keep working on it. I can actually see myself being decently knowledgable if I keep working at it. Pretty dope.
-![ibuycrap website](https://drive.google.com/uc?id=1BE9ks5Zpc3q4nXOjJnmPMBX_1ogOMpm3)  
+![ibuycrap website](/assets/img/lamlog/ibuycrapwebsite.png)  
 
 There are still several changes to be made before the site is fully functional:
 1. Remove "LAMLOG" from website title
