--- a/lamlog/_posts/2021-04-03-lamlog2.md
+++ b/lamlog/_posts/2021-04-03-lamlog2.md
@@ -6,12 +6,12 @@ time: 11:45 AM
  
 Yesterday I worked on designing a temporary logo for the LAMLOG blog that is currently being made. I took design inspiration from the sci-fi magazine "starlog". 
 
-![Influence of Logo](https://drive.google.com/uc?id=1QWYIr-q8Cs2GtqdLkWimG-c2RSFyTYam)
+![Influence of Logo](/assets/img/lamlog/logoinfluence.png)
 
 I think I might change the overall design of the blog name to be honest. I think it works for now but I think I'm going to redo it in more of a 70s typography similar to that seen in the Mort Gaeson album Plantasia with a little bit of chemical brothers logo thrown in for good measure. Again, though, the logo will work for the time being and I might even make some design choices centered around it. 
 
-![The Chemical Brothers](https://drive.google.com/uc?id=1IpfqJpfry_sQm7p4XPdUWdct63ehafhZ)
-![Plantasia](https://drive.google.com/uc?id=1JkPBiyXITVElTSaG6Mu0LUMFit2MpRtN)
+![The Chemical Brothers](assets\img\lamlog\chemicalbrothers.png)
+![Plantasia](assets\img\lamlog\plantasia.png)
 
 I am planning a couple of other sub-blogs that will have more distinct styles. One of them will be a blog talking about my recent physical media purchases as well as any other purchases that seem cool and I want to talk about. I believe I am going to call it "ibuycrap". I think I will go for an analog (tapes, paper, cds, vinyl) feeling for that website. I think some sort of counter that tracks how much money I waste on physical media and memorabilia would be funny as well.
  
