fixed post error

--- a/lamlog/_posts/2021-04-06-lamlog5.md
+++ b/lamlog/_posts/2021-04-06-lamlog5.md
@@ -10,8 +10,8 @@ Besides that massive dub, I got a good ammount of work done on the ibuycrap blog
 1. I added the format of each physical media (CD, Vinyl, VHS, etc.) to the metadata.
 ![format](/assets/img/lamlog/format.png) 
 2. Will helped me to add the "Money Wasted" counter functionality
-![format](/assets/img/lamlog/moneycode.jpg) 
-![format](/assets/img/lamlog/money.jpg) 
+![moneycode](/assets/img/lamlog/moneycode.png) 
+![money](/assets/img/lamlog/money.jpg) 
 3. I added in all the music I own to ibuycrap 
 4. I worked with Will to get the tag system working to add "music","video", and "other" tags to each post's metadata. Through this metadata we were able to make Music Collection, Video Collection, and Other pages that show the posts from each tag. 
 
