fleshed out idea in blog post

--- a/lamlog/_posts/2021-04-07-lamlog6.md
+++ b/lamlog/_posts/2021-04-07-lamlog6.md
@@ -10,4 +10,6 @@ Today I made it so all images on both ibuycrap and lamlog were hosted in the "as
 
 Tmrw I think I am going to try to get a couple of to do's done but friday will be more of a free day to pour effort into making noticable changes. It would be nice to maybe get the "SIMPLE" to do's done tmrw which just consist of posting all of my video collection and other collection, which while easy, does take a bit of time (but I can just use that time as a break in between work as its somewhat mindless). In fact, I might do some before bed right now. 
 
+As for the change of plans, I think I might end up renaming the "yardsale" blog. We will see when I reach that bridge. I think I will decide when I create the initial logo. I might end up changing it to something like fortunecookie or something more condusive to the "random post appears and user views it" setup I am working on.
+
 -- LAM
