installed spell check, wow i cant spell...

--- a/lamlog/_posts/2021-04-02-lamlog1.md
+++ b/lamlog/_posts/2021-04-02-lamlog1.md
@@ -4,7 +4,7 @@ title: CentralCreativeBlogosphere [CCB]
 time: 1:05 AM
 ---
 
-I see the blogs as just a beginning. That isnt to minimize the usefulness of said blogs, however, I am saying that to note the clear and obvious room for growth. The blogs allow us to track our own creative growth and witness others. It allows us to view the projects of our peers and see where we can lend a hand as well as other things. As we spoke about at the lighthouse, it is clearly a central website we can grow from. I am interested as I type this in my google notes app what it will bring. I know, though, that while we all see the potential for growth, our desire to discuss and acknowledge the possibility to expand (and thus legitimize) the site differs. Whats funny especially is that I type this before the site is even made and before we even have a title for the central website (lol).
+I see the blogs as just a beginning. That isn't to minimize the usefulness of said blogs, however, I am saying that to note the clear and obvious room for growth. The blogs allow us to track our own creative growth and witness others. It allows us to view the projects of our peers and see where we can lend a hand as well as other things. As we spoke about at the lighthouse, it is clearly a central website we can grow from. I am interested as I type this in my google notes app what it will bring. I know, though, that while we all see the potential for growth, our desire to discuss and acknowledge the possibility to expand (and thus legitimize) the site differs. Whats funny especially is that I type this before the site is even made and before we even have a title for the central website (lol).
 
 To continue my ramble, I see the site expanding in different stages. I am less writing this as a game plan and more as a prediction and an exercise in design and project management. 
 
@@ -13,7 +13,7 @@ STAGE 1: Blogs
 -users can reference other users to provide input and users can view others blogs to reach out with interest
 
 STAGE 2: Individual Project Growth
--utulize web hosting through central site to show off web-based content and tie it to not only yourself but the entire group
+-utilize web hosting through central site to show off web-based content and tie it to not only yourself but the entire group
 
 STAGE 3: Collaborative Projects 
 -central site hosts collaborative projects with links to behind the scenes on user's blogs
