--- a/lamlog/_posts/2021-04-11-lamlog8.md
+++ b/lamlog/_posts/2021-04-11-lamlog8.md
@@ -12,8 +12,8 @@ The most work I've done on the site the past couple of days has just been upload
 
 Moving forward I am going finish the first three todos in the "medium" section which are:
 1. Add link back to blogliam in ibuycrap (and eventually yardsale)
-2. Agregate other metadata into other analytics beyound money spent:
-    - Porportion of media in different formats
+2. Aggregate other metadata into other analytics beyond money spent:
+    - Proportion of media in different formats
     - [Write more analytics ideas]
 3. Add appropriate analytics to each collection page  
 
