--- a/lamlog/_posts/2021-04-14-lamlog9.md
+++ b/lamlog/_posts/2021-04-14-lamlog9.md
@@ -4,7 +4,7 @@ title: Utilization of Blog Knowledge + Gameplan
 time: 8:57 PM
 ---
 
-Today I made my resume have better accessibility with screen readers. I was struggling to do this as it was the first PDF I made and I didn't use a proper workflow back then to make accessibility stuff easy. I worked in acrobat to make the text readible:
+Today I made my resume have better accessibility with screen readers. I was struggling to do this as it was the first PDF I made and I didn't use a proper workflow back then to make accessibility stuff easy. I worked in acrobat to make the text readable:
 
 <object data="https://drive.google.com/file/d/17Iy3zMCiXZfrXSaqsIDWGAnAOh9pwF8i/preview" type="application/pdf" width="700px" height="700px">
     <embed src="https://drive.google.com/file/d/17Iy3zMCiXZfrXSaqsIDWGAnAOh9pwF8i/preview">
@@ -17,7 +17,7 @@ As for the concepts that have to do with the title of this post, I want to utili
 ![lukeamakinson](/assets/img/lamlog/lukeamakinson.jpg)  
 ![portfolio](/assets/img/lamlog/portfolio.jpg)  
 <br>
-I want to completely revamp the overall design of my website and have it be completely written and hosted by me. I think that would be a great achievment and also be very useful to display my skills and also useful in having greater customization than using Adobe Portfolio as I am now. The design I currently have doesn't really reflect any of my own artistic tastes and more relies on a general corporate aesthetics in an attempt to look mature. I have realized overtime it is almost more mature to have a website I find aesthetically pleasing, that reflects my personal design preferences, and is still professional and useful. Overall, that is much more of a show of media production/design strength.  
+I want to completely revamp the overall design of my website and have it be completely written and hosted by me. I think that would be a great achievement and also be very useful to display my skills and also useful in having greater customization than using Adobe Portfolio as I am now. The design I currently have doesn't really reflect any of my own artistic tastes and more relies on a general corporate aesthetics in an attempt to look mature. I have realized overtime it is almost more mature to have a website I find aesthetically pleasing, that reflects my personal design preferences, and is still professional and useful. Overall, that is much more of a show of media production/design strength.  
 
 The timeline of work should look something like this:
 - finish ibuycrap
@@ -29,14 +29,14 @@ The timeline of work should look something like this:
 
 To finish ibuycrap I just need to do the tasks I outlined in <a href="/lamlog/2021/04/11/lamlog8.html">LAMLOG 008:</a>
 1. Add link back to blogliam in ibuycrap (and eventually yardsale)
-2. Agregate other metadata into other analytics beyound money spent:
-    - Porportion of media in different formats
+2. Aggregate other metadata into other analytics beyond money spent:
+    - Proportion of media in different formats
     - [Write more analytics ideas]
 3. Add appropriate analytics to each collection page    
 
 Making yardsale will be more of an uphill battle. It consists of researching some jekyll plugins or native processes that will allow me to show a random post to the user upon clicking a button.  
 
-Past that I am going to take the time to make design mockups for every blog. One thing I need to figure out, and possibly talk to Will about is how mobile works in that whole equation. I am not sure if I write entirely different CSS styling for mobile or what, but, eitherway I will need to take that into consideration. I will also want to integrate any other changes like adding liking or comment functionality before I do those designs.  
+Past that I am going to take the time to make design mockups for every blog. One thing I need to figure out, and possibly talk to Will about is how mobile works in that whole equation. I am not sure if I write entirely different CSS styling for mobile or what, but, either way I will need to take that into consideration. I will also want to integrate any other changes like adding liking or comment functionality before I do those designs.  
 
 Once that is all done I am going to make mockup designs for lukeamakinson.com and research creating my site from the ground up with some help from Will most likely. Once I have the groundwork laid out I can get the site to basic functionality and then integrate the visual designs I will have come up with.  
 
