--- a/lamlog/_posts/2021-04-06-lamlog5.md
+++ b/lamlog/_posts/2021-04-06-lamlog5.md
@@ -15,12 +15,12 @@ Besides that massive dub, I got a good ammount of work done on the ibuycrap blog
 3. I added in all the music I own to ibuycrap 
 4. I worked with Will to get the tag system working to add "music","video", and "other" tags to each post's metadata. Through this metadata we were able to make Music Collection, Video Collection, and Other pages that show the posts from each tag. 
 
-With all of that completed, the ibuycrap blog has reached full functionality. Beyond this point, all further changes will be visual design based and/or minor additions that weren't accounted for in initial planning. On theorhetical future addition could be more robust analytics beyond money spent. I am collecting as much metadata as possible with each post in the hopes of making visually pleasing graphics of calculations of: format composition of my collection, spending habits over time, average ratings, etxc. All I need to do for now, though, is add in all of my video collection and any other purchases. 
+With all of that completed, the ibuycrap blog has reached full functionality. Beyond this point, all further changes will be visual design based and/or minor additions that weren't accounted for in initial planning. On theoretical future addition could be more robust analytics beyond money spent. I am collecting as much metadata as possible with each post in the hopes of making visually pleasing graphics of calculations of: format composition of my collection, spending habits over time, average ratings, etc. All I need to do for now, though, is add in all of my video collection and any other purchases. 
 
-The 3rd and final blog site will be the first and only to be completely written in Visual Studio Code and the first to utilize github (git) intigration. Once the 3rd site is functional (in the same way the first 2 currently are "functional) I am going to go back and do design mockups for each webside and then breakdown what html/css work I need to do to bring the designs to life. 
+The 3rd and final blog site will be the first and only to be completely written in Visual Studio Code and the first to utilize github (git) integration. Once the 3rd site is functional (in the same way the first 2 currently are "functional) I am going to go back and do design mockups for each website and then breakdown what html/css work I need to do to bring the designs to life. 
 
 Overall, still much to do with this blog project.
 
-School is also starting up and that means media & communications work for my extracurricular activites. Specifically, I have a meeting about designing sweatshirts (and a new logo) for the DASG. I will have a lot more small projects like that, including instagram posts and whatnot to utilize as practice and portoflio pieces in various mediums. Alongside these extracurricular media production tasks, I have two heavily project focused F/TV courses that are going to give me a lot to work with. A couple short film projects and sound design projects will be posted over the spring quarter. 
+School is also starting up and that means media & communications work for my extracurricular activities. Specifically, I have a meeting about designing sweatshirts (and a new logo) for the DASG. I will have a lot more small projects like that, including instagram posts and whatnot to utilize as practice and portfolio pieces in various mediums. Alongside these extracurricular media production tasks, I have two heavily project focused F/TV courses that are going to give me a lot to work with. A couple short film projects and sound design projects will be posted over the spring quarter. 
 
 -- LAM
