--- a/lamlog/_posts/2021-04-03-lamlog2.md
+++ b/lamlog/_posts/2021-04-03-lamlog2.md
@@ -8,7 +8,7 @@ Yesterday I worked on designing a temporary logo for the LAMLOG blog that is cur
 
 ![Influence of Logo](/assets/img/lamlog/logoinfluence.png)
 
-I think I might change the overall design of the blog name to be honest. I think it works for now but I think I'm going to redo it in more of a 70s typography similar to that seen in the Mort Gaeson album Plantasia with a little bit of chemical brothers logo thrown in for good measure. Again, though, the logo will work for the time being and I might even make some design choices centered around it. 
+I think I might change the overall design of the blog name to be honest. I think it works for now but I think I'm going to redo it in more of a 70s typography similar to that seen in the Mort Garson album Plantasia with a little bit of chemical brothers logo thrown in for good measure. Again, though, the logo will work for the time being and I might even make some design choices centered around it. 
 
 ![The Chemical Brothers](assets\img\lamlog\chemicalbrothers.png)
 ![Plantasia](assets\img\lamlog\plantasia.png)
@@ -19,7 +19,7 @@ I am also thinking about doing a blog where I just post philosophical affirmatio
  
 The idea of doing a less specific logo than the one I have now with more room to design around (rather than pure sci-fi/comic book feeling) allows me to do other ideas on the site as well. I am thinking about making holiday versions of the logo that appear on certain days and could possibly be programmed to change when those days come? I would need to talk to Will about this. Alongside the logo changing, the accent tones of the website could change as well? Who knows. 
  
-Another thing about the driving game will and henry are discussing is: What if you used tileable real world textures for absolutely everything, including the interior of the car? Henry already experimented with it for unreal world and I think we've found it's easy enough to do and could give it a weirdly realistic but also within an uncomfortable uncanny valley. 
+Another thing about the driving game will and henry are discussing is: What if you used tillable real world textures for absolutely everything, including the interior of the car? Henry already experimented with it for unreal world and I think we've found it's easy enough to do and could give it a weirdly realistic but also within an uncomfortable uncanny valley. 
  
 --
 LAM
