--- a/lamlog/_posts/2021-04-05-lamlog4.md
+++ b/lamlog/_posts/2021-04-05-lamlog4.md
@@ -7,14 +7,14 @@ time: 2:31 AM the next day
 Today I worked on building my second blog, [ibuycrap](https://lam.blogliam.com/ibuycrap/) where I am planning to host my physical media collection and other things I buy that interest me. In just today I was able to get a multitude of things completed. First off, I was able to make a quick placeholder logo for the time being, seen below:  
 ![ibuycrap logo](/assets/img/lamlog/ibuycraplogo.png)  
 
-Besides making the logo, I was also able to figure out altering the css, scss, and general directory of the website to achieve the look shown below. I altered Will's code that showed the time of posting to instead show the cost of the item I am posting about. Overall, I am quite suprised at how intuitive all this html/css and markdown stuff has become as I keep working on it. I can actually see myself being decently knowledgable if I keep working at it. Pretty dope.
+Besides making the logo, I was also able to figure out altering the css, scss, and general directory of the website to achieve the look shown below. I altered Will's code that showed the time of posting to instead show the cost of the item I am posting about. Overall, I am quite surprised at how intuitive all this html/css and markdown stuff has become as I keep working on it. I can actually see myself being decently knowledgeable if I keep working at it. Pretty dope.
 ![ibuycrap website](/assets/img/lamlog/ibuycrapwebsite.png)  
 
 There are still several changes to be made before the site is fully functional:
 1. Remove "LAMLOG" from website title
 2. Figure out tagging of posts through Liquid (?)
 3. Integrate tag feature into /music, /video, and /other webpages so they display the posts that fall under those tags
-4. Figure out how to agregate "price:" data point of each post into a counter at the top of the page
+4. Figure out how to aggregate "price:" data point of each post into a counter at the top of the page
 5. Post shit
 
 Once this is complete, I will continue posting on both with little revision for a while. I want to get all three concepts for blogs I have up and running (in one form or another) before I do design overhauls of each blog. At least from my perspective, figuring out how to make each site functional takes priority before integrating pretty designs.  
