--- a/lamlog/_posts/2021-04-07-lamlog6.md
+++ b/lamlog/_posts/2021-04-07-lamlog6.md
@@ -4,12 +4,12 @@ title: Behind the Scenes work + Change of Plans
 time: 12:11 AM 
 ---
 
-Overall, today was mostly fixing bts issues on the site and not necissarily putting forward any new content or features. I am not sure if I will have the time tmrw to do any sizable changes either but by the end of the week ass the to do's in "SIMPLE" and some in "MEDIUM" should be completed.
+Overall, today was mostly fixing bts issues on the site and not necessarily putting forward any new content or features. I am not sure if I will have the time tmrw to do any sizable changes either but by the end of the week ass the to do's in "SIMPLE" and some in "MEDIUM" should be completed.
 
-Today I made it so all images on both ibuycrap and lamlog were hosted in the "assets" directory rather than being pulled from a google drive host. This makes the images load on pages signifigantly faster which is nice. I also fixed the redirects I have in my menus of my blogs to be relative redirects which works better with localhost testing on my end. 
+Today I made it so all images on both ibuycrap and lamlog were hosted in the "assets" directory rather than being pulled from a google drive host. This makes the images load on pages significantly faster which is nice. I also fixed the redirects I have in my menus of my blogs to be relative redirects which works better with localhost testing on my end. 
 
-Tmrw I think I am going to try to get a couple of to do's done but friday will be more of a free day to pour effort into making noticable changes. It would be nice to maybe get the "SIMPLE" to do's done tmrw which just consist of posting all of my video collection and other collection, which while easy, does take a bit of time (but I can just use that time as a break in between work as its somewhat mindless). In fact, I might do some before bed right now. 
+Tmrw I think I am going to try to get a couple of to do's done but friday will be more of a free day to pour effort into making noticeable changes. It would be nice to maybe get the "SIMPLE" to do's done tmrw which just consist of posting all of my video collection and other collection, which while easy, does take a bit of time (but I can just use that time as a break in between work as its somewhat mindless). In fact, I might do some before bed right now. 
 
-As for the change of plans, I think I might end up renaming the "yardsale" blog. We will see when I reach that bridge. I think I will decide when I create the initial logo. I might end up changing it to something like fortunecookie or something more condusive to the "random post appears and user views it" setup I am working on.
+As for the change of plans, I think I might end up renaming the "yardsale" blog. We will see when I reach that bridge. I think I will decide when I create the initial logo. I might end up changing it to something like fortunecookie or something more conducive to the "random post appears and user views it" setup I am working on.
 
 -- LAM
