--- a/lamlog/_posts/2021-04-19-lamlog10.md
+++ b/lamlog/_posts/2021-04-19-lamlog10.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Portfolio Update + Blogliam Update + Interesting Thought
+title: Portfolio Update + Interesting Thought
 time: 10:16 PM
 ---
 
