--- a/lamlog/_posts/2021-04-25-lamlog12.md
+++ b/lamlog/_posts/2021-04-25-lamlog12.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Sound Recording Class Projects + Cool Gif
-time: 
+time: 11:50 PM
 ---
 So today I had to do some projects for my Sound Recording class using the equipment I loaned from my college.  
 
