--- a/ibuycrap/_posts/2021-07-18-dropout.md
+++ b/ibuycrap/_posts/2021-07-18-dropout.md
@@ -8,4 +8,4 @@ rating: 5
 ![dropout](/assets/img/ibuycrap/dropout.jpg) 
 
 Review: [5/5] One of my favorite albums of all time. Forever relatable and inspiring.  
-Notes: Last Call is amazing.
+Notes: Last Call is amazing!
